<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- No translate required -->
    <string name="app_name">HomeLike</string>
    <string name="url_terms_and_conditions">http://homelike.com.mx/docs/AvisodePrivacidad.pdf</string>

    <!-- Application -->
    <string name="action_logout">Logout</string>
    <string name="gratitue_message">Thanks for your help!</string>
    <string name="client_config">I\'m a Client</string>
    <string name="provider_config">I\'m a Provider</string>
    <string name="kind_of_user_message">Select your kind of user</string>

    <!-- Home Menu -->
    <string name="home_services">Services</string>
    <string name="home_orders">Orders</string>
    <string name="home_my_addresses">My Addresses</string>
    <string name="home_suggestions">Suggestions</string>
    <string name="home_contact">Contact</string>
    <string name="home_new_orders">New Orders</string>
    <string name="home_confirmed_orders">Confirmed Orders</string>
    <string name="no_username">No user name</string>
    <string name="comments_and_suggestions">Suggestions</string>

    <!-- Dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_process">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="reselect">Reselect</string>
    <string name="leave">Leave</string>
    <string name="discard">Discard</string>
    <string name="sending">Sending</string>

    <!-- Errors -->
    <string name="error">Error</string>
    <string name="missing_fields">Missing fields</string>
    <string name="error_load_address">Failed to recover address with id: %d</string>
    <string name="error_create_order">Failed to create your order, try again later</string>
    <string name="error_play_services">Failed to load Google Play Services…</string>
    <string name="error_retrieving_location">No location data could be found at the point you selected. Would you like to continue?</string>
    <string name="error_field_validation">The following fields are required to continue with registration: \n</string>
    <string name="error_suggestion_validation">You need to add: \n</string>
    <string name="error_register_address">Failed to register address, try again later</string>
    <string name="error_registered_account">The account was already registered with other device</string>
    <string name="error_update_order">Failed to update order status. Try again later.</string>
    <string name="error_empty_suggestion">Add a suggestion</string>
    <string name="error_suggestion_type_not_selected">A suggestion type</string>
    <string name="error_loading_options">Failed to load options</string>
    <string name="error_send_suggestion">Failed to send. Tray again later</string>
    <string name="error_failed_sign_in_no_account">The account hasn\'t been registered yet. Please go to:\nhttp://homelike.com.mx</string>
    <string name="error_failed_sign_in_account_in_process">The account is still in process of registration. Please go to:\nhttp://homelike.com.mx</string>

    <!-- Create Account -->
    <string name="register_account">Register Account</string>
    <string name="register">Register</string>
    <string name="missing_email">Missing email</string>
    <string name="missing_mobile">Missing mobile</string>
    <string name="terms_not_accepted">You need to accept the terms and conditions</string>
    <string name="wrong_field">Wrong Field</string>
    <string name="registering_account">Registering…</string>
    <string name="signing_in">Signing in…</string>
    <string name="updating">Updating</string>
    <string name="send">Send</string>
    <string name="i_accept">I accept the </string>
    <string name="terms_and_conditions">terms and conditions.</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>

    <!-- Order -->
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_order_message">Are you sure you want to cancel this order?</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="empty_order">Empty Order</string>
    <string name="empty_order_message">The order is empty, please select your products</string>
    <string name="new_order">New Order</string>
    <string name="wait">Please wait…</string>
    <string name="no_comments">No comments</string>
    <string name="client_comment">Client Comment</string>
    <string name="provider_comment">Provider Comment</string>
    <string name="providers">Providers</string>
    <string name="leave_orders">Leave Orders</string>
    <string name="leave_orders_message">Are your sure you want to leave this section?</string>
    <string name="next">Next</string>
    <string name="your_orders">Your orders</string>
    <string name="preparing_order">Preparing new order…</string>
    <string name="payment_quantity">Payment Quantity</string>
    <string name="comments">Comments</string>
    <string name="comments_hint">Comments to the provider, like payment quantity</string>
    <string name="comments_to_client_hint">Enter a comment, like the delivery time</string>
    <string name="no_active_orders">You don\'t have any active orders</string>
    <string name="no_providers_found">No providers found in this area</string>
    <string name="phone_short">Phone</string>
    <string name="no_products">This provider doesn\'t have products</string>
    <string name="request_provider">Request Provider</string>
    <string name="schedule_mon_fri">M - F</string>
    <string name="schedule_sat">Sat</string>
    <string name="schedule_sun">Sun</string>
    <string name="schedule_connector">to</string>
    <string name="back">Back</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="loading_new_order">Loading new order…</string>
    <string name="loading_order">Loading order…</string>
    <string name="delivery_address">Delivery address:</string>
    <string name="loading_services">[ Loading services ]</string>
    <string name="loading_orders">[ Loading orders ]</string>
    <string name="loading_suggestions">[ Loading suggestions ]</string>
    <string name="wait_provider"> [ Searching providers ]</string>
    <string name="loading_comments_provider"> [ Loading comments ]</string>
    <string name="finish_order"> My order has arrived </string>

    <!-- Address -->
    <string name="location">Location</string>
    <string name="select">Select</string>
    <string name="action_map">Show Map</string>
    <string name="retrieving_location">Retrieving location data…</string>
    <string name="saving_address">Saving…</string>
    <string name="required_fields">Required Fields</string>
    <string name="field_alias">Alias</string>
    <string name="field_street">Street</string>
    <string name="field_street_number">Exterior</string>
    <string name="field_interior">Interior</string>
    <string name="field_colony">Colony</string>
    <string name="field_zip_code">Zip Code</string>
    <string name="field_city">City</string>
    <string name="field_state">State</string>
    <string name="field_country">Country</string>
    <string name="field_reference">Reference</string>
    <string name="address_saved">Address Saved</string>
    <string name="add_new_address">Add new address</string>
    <string name="discard_address_message">Are your sure you want to discard your selection?</string>
    <string name="deleting_address">Deleting address</string>
    <string name="delete_address_message">Are you sure you want to delete your address?</string>

    <!-- Services -->
    <string name="favourite_address">Favourite Address</string>
    <string name="use_favourite_address">
        Do you want to use your favourite address for the new order:\n\n%s.
    </string>
    <string name="change_address">Change Address</string>
    <string name="kind_of_service">What service are you looking for?</string>

    <!-- Order Status -->
    <string name="status_new">New</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="comment_sent">Comment sent!</string>
    <string name="rating">Rating</string>
    <string name="rate_provider_message">Rate the provider service quality</string>
    <string name="comments_to_provider_hint">Comments to the provider\'s service</string>

    <!-- Suggestions -->
    <string name="write_suggestion_hint">Comments</string>
    <string name="improve_experience">Thanks to your suggestions we can improve your experience!</string>

    <!--Address-->
    <string name="alias_hint">Home, Work</string>
    <string name="street_hint">Av. Insurgentes</string>
    <string name="street_number_hint">Street Number</string>
    <string name="interior_hint">Building 5, Apt. 10</string>
    <string name="colony_hint">Roma Sur</string>
    <string name="zip_code_hint">55555</string>
    <string name="city_hint">Cuauhtémoc</string>
    <string name="state_hint">Distrito Federal</string>
    <string name="country_hint">Mexico</string>
    <string name="reference_hint">Color,streets,etc.</string>
    <string name="finish">Finish</string>

    <!--Notifications-->
    <string name="new_order_received">New Order</string>
    <string name="new_order_received_message">You\'ve received a new order</string>
    <string name="confirmed_order_received">Order Confirmed</string>
    <string name="confirmed_order_received_message">Your order has been confirmed</string>

</resources>
