<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:homelike="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp">

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_alias"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_alias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alias_hint"
                        android:layout_weight="1"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_street"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_hint"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_street_number"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_street_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_number_hint"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_interior"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_interior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/interior_hint"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_colony"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_colony"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/colony_hint"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_zip_code"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_zip_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/zip_code_hint"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_city"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_hint"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_state"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state_hint"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_country"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country_hint"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>

                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <mx.jtails.homelike.ui.widget.TypeFacedTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/field_reference"
                        android:textSize="19sp"
                        homelike:typeface="fonts/Roboto-Light.ttf"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/white"/>

                    <EditText android:id="@+id/edit_reference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reference_hint"
                        android:layout_weight="1"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/white"
                        android:textColorHint="#eee"/>

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_column="1">

                <Button android:id="@+id/btn_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/finish"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:padding="15dp"
                    android:background="@drawable/bg_btn"
                    android:layout_margin="3dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>