<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:homelike="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_controls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/layout_order_details"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_orders"/>

                <mx.jtails.homelike.ui.widget.TypeFacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    homelike:typeface="fonts/RobotoCondensed-Light.ttf"
                    android:text="@string/your_orders"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <mx.jtails.homelike.ui.widget.TypeFacedTextView
                    android:id="@+id/lbl_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    homelike:typeface="fonts/Roboto-Light.ttf"
                    android:background="@drawable/bg_order_total"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_quantity"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_vertical"/>

                <Spinner android:id="@+id/spinner_payments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <mx.jtails.homelike.ui.widget.TypeFacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:text="@string/comments"
                    homelike:typeface="fonts/Roboto-Regular.ttf"
                    android:visibility="gone"/>

                <EditText android:id="@+id/edit_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:lines="5"
                    android:textColorHint="#333"
                    android:hint="@string/comments_hint"
                    android:background="#99ffffff"
                    android:gravity="top|center_horizontal"
                    android:padding="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout android:id="@+id/layout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/wait"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_alignParentBottom="true">

        <Button android:id="@+id/btn_edit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:text="@string/edit"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_btn"/>

        <Button android:id="@+id/btn_confirm_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_btn"/>
    </LinearLayout>

</RelativeLayout>