<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView android:id="@+id/lbl_thanks_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/improve_experience"
        android:layout_margin="15dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <LinearLayout android:id="@+id/layout_content"
        android:layout_above="@+id/btn_send"
        android:layout_below="@+id/lbl_thanks_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ProgressBar android:id="@+id/progress_suggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <RadioGroup android:id="@+id/group_suggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"/>

            <TextView android:id="@+id/lbl_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff4444"
                android:layout_below="@+id/group_suggestions"
                android:layout_alignLeft="@+id/group_suggestions"
                android:visibility="gone"
                android:layout_margin="5dp"/>

        </RelativeLayout>

        <EditText android:id="@+id/edit_suggestion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/white"
            android:hint="@string/write_suggestion_hint"
            android:gravity="center_horizontal|top"
            android:textColorHint="#999"/>

    </LinearLayout>

    <Button android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@drawable/bg_btn"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>